DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
  Summary for 4.99.7 tcpdump release (so far!)
    Source code:
      NetFlow: Use tcp_flag_values[] for TCP flags.
    Refine protocol decoding for:
      MPTCP: parse MPC data_len field, print flags from MP_CAPABLE option,
        dissect the MP_TCPRST sub-option.

Tuesday, December 30, 2025 / The Tcpdump Group
  Summary for 4.99.6 tcpdump release
    Remove protocol decoding for:
      OTV (draft-hasmit-otv-04, this Internet-Draft is no longer active).
    Refine protocol decoding for:
      DNS: Use ND_TCHECK_LEN() instead of a custom bounds check.
      IPv6: Add a missing comma and remove a colon in the output.
      TCP: Note if the Urgent Pointer is non-zero while URG flag not set,
           if the verbose level is > 1 (option -vv and more).
      TCP: Note if the Acknowledgment Number is non-zero while ACK flag not set,
           if the verbose level is > 1 (option -vv and more).
      TCP: Fix Reset segment processing.
      IP, IPv6: Fix setting the snapshot length for the payload.
      IP: Use ND_TTEST_LEN() instead of a custom bounds check.
      frag6: Add a bounds check in non-verbose mode.
      PTP: Remove spaces before colons in output.
      PTP: Fix management packet fields.
      ISO: Avoid undefined behavior and integer overflow in the Fletcher
           checksum calculation.
      NFS: Delete dead code.
      BOOTP: Use an uint16_t variable to get the result of a GET_BE_U_2().
      ZEP: use the existing NTP time formatting code.
      NTP: Fix p_ntp_time_fmt() using epoch 1/epoch 2 convention (RFC 4330).
      NTP: Update a field name with the RFC 5905 name (Origin Timestamp).
      IPv6 mobility: Modernize packet parsing and make fixes.
      IP6OPTS: Modernize packet parsing and make fixes.
      VXLAN: Add UDP port 8472 used by Linux as the default port.
      EGP: Replace custom code with tok2str(); Modernize packet parsing and
        fix printing with -v option.
    User interface: