@@ -1,3 +1,3 @@
     1  1975-04-27 03:20:48.999999 IP [total length 62 > length 50] (invalid) (tos 0x0, ttl 254, id 13327, offset 0, flags [+, DF, rsvd], proto TCP (6), length 62, bad cksum 8e7f (->c283)!)
-    19.128.128.20.323 > 76.19.6.127.49600: Flags [none], seq 2684354563:2684354585, [ack 3892371968 != 0 while ACK flag not set], win 28672, [urg 770 != 0 while URG flag not set], length 22
+    19.128.128.20.323 > 76.19.6.127.49600: Flags [e], seq 2684354563:2684354585, [ack 3892371968 != 0 while ACK flag not set], win 28672, [urg 770 != 0 while URG flag not set], length 22
 	RPKI-RTRv171 (unknown)
